# rtpr-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: cpp-ci.yml  java-ci.yml  node-ci.yml  python-ci.yml
cpp/: CMakeLists.txt  README.md
cpp/examples/: quickstart.cpp  stream_articles.cpp
cpp/include/rtpr/: client.hpp  exceptions.hpp  models.hpp  websocket.hpp
cpp/src/: client.cpp  websocket.cpp
java/: README.md  pom.xml
java/examples/: QuickStart.java  StreamArticles.java
java/src/main/java/io/rtpr/sdk/: RtprClient.java  RtprWebSocket.java
java/src/main/java/io/rtpr/sdk/exception/: AuthenticationException.java  RateLimitException.java  RtprException.java
java/src/main/java/io/rtpr/sdk/model/: Article.java  ArticlesResponse.java
node/: README.md  package-lock.json  package.json  tsconfig.json
node/examples/: quickstart.ts  stream-firehose.ts
node/src/: client.ts  errors.ts  index.ts  models.ts  websocket.ts
node/tests/: client.test.ts  models.test.ts
python/: README.md  pyproject.toml
python/examples/: quickstart.py  stream_firehose.py  trading_bot_example.py
python/rtpr/: __init__.py  client.py  exceptions.py  models.py  websocket.py
python/tests/: test_client.py  test_models.py
