[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtpr"
version = "0.1.0"
description = "Official Python SDK for RTPR — real-time press releases in under 500ms"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "RTPR", email = "support@rtpr.io" },
]
keywords = [
    "rtpr",
    "press-releases",
    "real-time",
    "financial-news",
    "trading",
    "algorithmic-trading",
    "websocket",
    "api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://rtpr.io"
Documentation = "https://rtpr.io/docs"
Repository = "https://github.com/rtpr-io/rtpr-sdk"
Issues = "https://github.com/rtpr-io/rtpr-sdk/issues"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
